# listenbravo_test

./: .env  Dockerfile  README.md  db.py  main.py  pyproject.toml  test.csv  upload.html  utils.py
